# k-in-a-row

./: README.md  docker-compose.yml
.github/: dependabot.yml
.github/workflows/: build-be.yml  build-images.yml  build-run-local.yml  deploy-be.yml  deploy-fe.yml  main-be.yml  main-fe.yml  main.yml  tests-be.yml  tests-fe.yml
be/: .gitignore  Cargo.toml  Dockerfile  README.md
be/benches/: bench.rs
be/gcp/: README.md  main.tf  outputs.tf  variables.tf
be/gcp/environments/: prod.tfvars
be/scripts/: poll_next_move.sh
be/src/: bot.rs  conf.rs  first_move.rs  game.rs  guards.rs  handlers.rs  lib.rs  main.rs  models.rs
fe/: .dockerignore  .env.example  .eslintrc.cjs  .firebaserc  .gitignore  Dockerfile  README.md  eslint.config.js  firebase.json  package-lock.json  package.json  svelte.config.js  tsconfig.json  vite.config.ts
fe/src/: app.html
fe/src/lib/: botmove.ts  games.ts  levels.ts  phrases.ts  players.ts  utils.ts  winner.test.ts  winner.ts
fe/src/routes/: +error.svelte  +page.svelte  board.svelte  dropdowns.svelte  errors.svelte  info.svelte  spinner.svelte  winner.svelte
fe/src/routes/board/: +page.svelte  start.svelte  topbar.svelte  winner.svelte
