[package]
name = "be"
version = "1.0.0"
edition = "2021"
license = "CC0-1.0"
description = "Backend service for the k-in-a-row game."
default-run = "server"

[[bin]]
name = "server"

[profile.dev]
opt-level = 2
overflow-checks = false

[profile.test]
opt-level = 2
overflow-checks = false

[profile.release]
opt-level = 2

[dependencies]
actix-web = "4.3"
actix-rt = "2.8"
actix-cors = "0.6"
serde = { version = "1.0.155", features = ["derive"] }
rand = "0.8"
