[package]
name = "be"
version = "1.0.0"
edition = "2021"
license = "CC0-1.0"
description = "Backend service for the k-in-a-row game."
default-run = "server"

[[bin]]
name = "server"
bench = false

[profile.dev]
opt-level = 2
overflow-checks = false

[profile.test]
opt-level = 2
overflow-checks = false

[profile.release]
opt-level = 2

[dependencies]
actix-web = "4.4"
actix-rt = "2.9"
actix-cors = "0.6"
serde = { version = "1.0.188", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
