[package]
name = "be"
version = "1.0.0"
edition = "2021"
license = "CC0-1.0"
description = "Backend service for the k-in-a-row game."
default-run = "server"

[[bin]]
name = "server"
bench = false

[profile.dev]
opt-level = 2
overflow-checks = false

[profile.test]
opt-level = 2
overflow-checks = false

[profile.release]
opt-level = 2

[dependencies]
actix-web = "4.9"
actix-rt = "2.10"
actix-cors = "0.7"
actix-governor = "0.5.0"
serde = { version = "1.0.210", features = ["derive"] }
rand = "0.8"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "bench"
harness = false
